--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TechCon 2024</title>
+  <meta charset="utf-8">
+  <title>TechCon 2024 - Conference Homepage</title>
 </head>
 <body>
 
-  <!-- Header -->
+  <!-- Header with title and navigation -->
   <header>
     <h1>TechCon 2024</h1>
     <nav>
@@ -20,25 +19,27 @@
     </nav>
   </header>
 
-  <!-- Main Content -->
+  <!-- Main content -->
   <main>
     <section>
       <h2>Welcome to TechCon 2024</h2>
       <p>
-        TechCon 2024 is a premier technology conference bringing together innovators, developers, and leaders from around the world to explore the future of tech. Join us for engaging talks, hands-on workshops, and invaluable networking opportunities.
+        TechCon 2024 is the leading technology conference of the year, gathering innovators, developers, and tech leaders from around the world. Join us for cutting-edge talks, hands-on workshops, and exciting networking opportunities.
       </p>
 
-      <video controls width="640">
-        <source src="media/techcon_promo.mp4" type="video/mp4">
-        <track src="media/techcon_subtitles.vtt" kind="subtitles" srclang="en" label="English">
-        Your browser does not support the video tag.
+      <!-- Promotional video with controls and subtitles -->
+      <video controls width="640" aria-label="Promotional video for TechCon 2024">
+        <source src="videos/techcon2024-promo.mp4" type="video/mp4">
+        <track src="videos/techcon2024-subtitles.vtt" kind="subtitles" srclang="en" label="English">
+        Your browser does not support the video tag. You can watch the video 
+        <a href="videos/techcon2024-promo.mp4" target="_blank">here</a>.
       </video>
     </section>
   </main>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved.</p>
+    <p>copyright&copy; 2024 TechCon Conference. All rights reserved.</p>
   </footer>
 
 </body>
