--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
   <!-- Main content -->
   <main>
     <section>
-      <h2>Welcome to TechCon 2024</h2>
+      <h2>Conference Overview</h2>
       <p>
         TechCon 2024 is the leading technology conference of the year, gathering innovators, developers, and tech leaders from around the world. Join us for cutting-edge talks, hands-on workshops, and exciting networking opportunities.
       </p>
+    </section>
 
+    <section>
+      <h2>Watch Our Promo</h2>
       <!-- Promotional video with controls and subtitles -->
-      <video controls width="640" aria-label="Promotional video for TechCon 2024">
+      <video controls width="640" aria-label="Promotional video for TechCon 2024" title="Promotional video for TechCon 2024">
         <source src="videos/techcon2024-promo.mp4" type="video/mp4">
+        <source src="videos/techcon2024-promo.webm" type="video/webm">
         <track src="videos/techcon2024-subtitles.vtt" kind="subtitles" srclang="en" label="English">
         Your browser does not support the video tag. You can watch the video 
         <a href="videos/techcon2024-promo.mp4" target="_blank">here</a>.
@@ -39,8 +43,10 @@
 
   <!-- Footer -->
   <footer>
-    <p>copyright&copy; 2024 TechCon Conference. All rights reserved.</p>
+    <h2>Contact & Legal</h2>
+    <p>&copy; 2024 TechCon Conference. All rights reserved.</p>
   </footer>
 
 </body>
 </html>
+
