--- a/about.html
+++ b/about.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>About TechCon 2024</title>
+</head>
+<body>
+
+  <!-- Header with title and navigation -->
+  <header>
+    <h1>About TechCon 2024</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main content -->
+  <main>
+
+    <!-- History Section -->
+    <article>
+      <h2>Our History</h2>
+      <p>
+        TechCon began in 2010 as a grassroots meetup for local tech enthusiasts. Over the years, it has evolved into an international event attracting thousands of participants from all over the globe.
+      </p>
+      <img src="images/history-photo1.jpg" alt="TechCon's first event in 2010" width="600">
+      <img src="images/history-photo2.jpg" alt="TechCon 2015 conference hall full of attendees" width="600">
+    </article>
+
+    <!-- Mission Section -->
+    <article>
+      <h2>Our Mission</h2>
+      <p>
+        TechCon's mission is to foster innovation, inspire collaboration, and empower the global tech community. We believe in open knowledge sharing, diversity, and building a future powered by ethical technology.
+      </p>
+      <img src="images/mission-icon.png" alt="TechCon mission icon - lightbulb representing innovation" width="100">
+    </article>
+
+    <!-- Past Speakers Section -->
+    <article>
+      <h2>Notable Past Speakers</h2>
+
+      <section>
+        <h3>Jane Doe – AI Researcher</h3>
+        <img src="images/speaker-jane.jpg" alt="Jane Doe, AI Researcher" width="200">
+        <p>
+          Jane has pioneered research in explainable AI and was a keynote speaker at TechCon 2022. Her work focuses on making machine learning more transparent and ethical.
+        </p>
+      </section>
+
+      <section>
+        <h3>Dr. Alan Smith – Cybersecurity Expert</h3>
+        <img src="images/speaker-alan.jpg" alt="Dr. Alan Smith, Cybersecurity Expert" width="200">
+        <p>
+          A world-renowned expert in digital security, Alan discussed critical infrastructure protection in his 2021 TechCon keynote, emphasizing resilience against cyber threats.
+        </p>
+      </section>
+
+      <section>
+        <h3>Maria Lee – Software Engineer and Open Source Advocate</h3>
+        <img src="images/speaker-maria.jpg" alt="Maria Lee, Open Source Advocate" width="200">
+        <p>
+          Maria shared insights into scaling open-source communities at TechCon 2020, encouraging inclusive contribution models across global developer ecosystems.
+        </p>
+      </section>
+
+    </article>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <h2>Contact & Legal</h2>
+    <p>&copy; 2024 TechCon Conference. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
 
