--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>Register for TechCon 2024</h1>
+        <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="schedule.html">Schedule</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+    </header>
+    <main>
+            <form >
+                 <label for="text">full name</label>
+                 <input type="text" placeholder="enter full name" required>
+                 <label for="email" >email</label>
+                 <input type="email" name="email" placeholder="enter email" required> 
+                 <label for="password">password</label>
+                 <input type="password" name="password" placeholder="enter password" required>
+                 <label for="terms"><a href="www,thhhhhhh">terms and conditions</a></label>
+                 <input type="checkbox" name="terms" required>
+                 <label for="submit">Register Now</label>
+                 <button type="submit">submit</button>
 
+            
+            </form>
+    </main>
+    <footer>
+        <p>copyright&copy; 2024 TechCon Conference. All rights reserved.</p>
+    </footer>
+</body>
+</html>
